# appg-membership

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  readme.md
.devcontainer/: devcontainer.json
.github/workflows/: build_and_publish.yml
data/apg_ni/: access-to-justice.json  active-travel.json  addiction-and-dual-diagnosis.json  adhd.json  aerospace-and-space.json  ageing-and-older-people.json  animal-welfare.json  artificial-intelligence.json  arts.json  autism.json  built-environment.json  cancer.json  carers.json  climate-action.json  community-pharmacy.json  dementia.json  diabetes.json  disability.json  domestic-and-sexual-violence.json  early-education-and-childcare.json  eating-disorders-and-disordered-eating.json  ethnic-minority-community.json  food-to-go.json  football.json  fuel-poverty.json  funerals-and-bereavement.json  further-and-higher-education.json  general-practice.json  homelessness.json  housing.json  international-development.json  learning-disability.json  lgbtqia-equality.json  lung-health.json  mental-health.json  micro-and-small-business.json  modern-slavery-and-sexual-exploitation.json  ms-and-neurology.json  online-safety-for-children-and-young-people.json  parental-participation-in-education.json  (+16 more)
data/appgs/: abraham-accords.json  access-to-disability-equipment.json  access-to-justice.json  access-to-medicines-and-medical-devices.json  acquired-brain-injury.json  action-against-illegal-gambling.json  adoption-and-permanence.json  adult-social-care.json  advertising.json  afghan-women-and-girls.json  africa.json  afrikan-reparations.json  ageing-and-older-people.json  ahmadiyya-muslim-community.json  aid-match.json  air-ambulances.json  airport-communities.json  alevis.json  allergy.json  allied-health-professionals.json  antisemitism.json  (+605 more)
docs/: Gemfile  _config.yml  diffs.md  index.md
tests/: test_ni_assembly.py  test_senedd.py
(+7538 files in other folders)
